--- a/pom.xml
+++ b/pom.xml
@@ -252,6 +252,24 @@
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/dev.samstevens.totp/totp -->
+		<dependency>
+			<groupId>dev.samstevens.totp</groupId>
+			<artifactId>totp</artifactId>
+			<version>1.7.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.warrenstrange</groupId>
+			<artifactId>googleauth</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+
+
 
 
 	</dependencies>
